generic-allow-all-egress.yaml
---
# DEBUGGING. going to allow all for a second
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
# DEBUGGING. going to allow all for a second
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np-allow-to-dns
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
  policyTypes:
    - Egress
